--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,15 @@
         "dockerfile": "Dockerfile",
         "context": ".."
     },
-    "remoteEnv": { "PATH": "${containerEnv:PATH}:/wasi-sdk-17.0/bin" }
+    "features": {
+        "devwasm.azurecr.io/dev-wasm/dev-wasm-feature/wasmtime-wasi:0.0.13": {
+            "version": "20",
+            "wasmtime_version": "v15.0.1",
+            "wit_version": "0.16.0"
+        },
+        "ghcr.io/devcontainers/features/common-utils": {}
+    },
+    "remoteEnv": {
+	    "PATH": "${containerEnv:PATH}:/usr/local/lib/wasi-sdk-20.0/bin:/usr/local/lib"
+    }
 }
